updated to excel

--- a/howard-data-collection.ipynb
+++ b/howard-data-collection.ipynb
@@ -1,235 +1,189 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "55c89fc0-a6ae-4330-914e-edfbdf11f792",
-   "metadata": {},
-   "source": [
-    "## SoccerCovid - Data Scrapping"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2ef7c69d-dccc-41ae-af85-5e1c997d617a",
-   "metadata": {},
+   "execution_count": null,
+   "id": "8e048057-60bf-4a68-a961-9ee7e4b8aca3",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
     "import pandas as pd\n",
     "import re\n",
-    "import os\n",
-    "import time\n",
-    "from selenium import webdriver\n",
-    "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver.chrome.service import Service"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8e707dc-83fd-4e71-b3f1-8eeaab909728",
+   "id": "60f43364-9bff-4933-a221-779bb50febd5",
    "metadata": {
-    "scrolled": true,
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def get_match_raw(url):\n",
-    "    return BeautifulSoup(requests.get(url).text, \"html.parser\")\n",
-    "\n",
+    "url = 'https://www.howardcountymd.gov/police/newsroom'\n",
+    "soup = BeautifulSoup(requests.get(url).text, \"html.parser\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "236305b5-46a0-4b6f-84f2-986efc87de35",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "def get_parced_data(raw):\n",
-    "    return BeautifulSoup(raw, 'html.parser')\n",
-    "\n",
-    "def get_match_schedule(raw):\n",
-    "    if raw.find_all(\"time\"):\n",
-    "        return raw.find_all(\"time\")[0].string\n",
-    "\n",
-    "def get_venue_name(raw):\n",
-    "    if raw.find_all(\"span\", {\"class\": \"sdc-site-match-header__detail-venue\"}):\n",
-    "        return raw.find_all(\"span\", {\"class\": \"sdc-site-match-header__detail-venue\"})[0].string\n",
-    "\n",
-    "def get_match_title(raw):\n",
-    "    return raw.title.string\n",
-    "\n",
-    "def get_team_names(title, title_regex):\n",
-    "    title_group = title_regex.match(title)\n",
-    "    if title_group:\n",
-    "        return title_group.group('teamA'), title_group.group('teamB')\n",
-    "\n",
-    "def get_team_scores(title, title_regex):\n",
-    "    title_group = title_regex.match(title)\n",
-    "    if title_group:\n",
-    "        return title_group.group('teamA_score'), title_group.group('teamB_score')\n",
-    "\n",
-    "def get_winner_details(record):\n",
-    "    if(record['teamA_score'] and record['teamA_score'] > record['teamB_score']):\n",
-    "        return record['teamA'], record['teamA_score']\n",
-    "    elif(record['teamA_score']):\n",
-    "        return record['teamB'], record['teamB_score']"
+    "    if raw.find_all(\"div\", {\"id\": \"daily-crime-bulletin\"}):\n",
+    "        if raw.find_all(\"div\", {\"class\": \"paragraph--accordion__title\"}):\n",
+    "            if raw.find_all(\"div\", {\"class\": \"field__item\"}):\n",
+    "                return raw.find_all(\"div\", {\"class\": \"field__item\"})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2822735-6de0-4694-bade-23cdd9149bf0",
+   "id": "c0052150-48e5-4033-8940-438025d01f82",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "base_url = 'https://www.skysports.com/premier-league-results/'\n",
+    "parced_data = get_parced_data(soup)\n",
+    "crimes = [] \n",
     "\n",
-    "def get_match_details(year_range, file_name):\n",
-    "    print('Entered get_match_details')\n",
-    "    if not os.path.exists('match_details_'+file_name):\n",
-    "        if not os.path.exists('raw_'+file_name):\n",
-    "            site = str(requests.get(base_url + year_range).content) #Fetch HTML Page\n",
-    "            match_url_regex = r'<a href=\"(https:\\/\\/www\\.skysports\\.com\\/football\\/[a-zA-Z-\\/]+\\d+)\" class=\"matches__item matches__link\"'\n",
-    "            match_url_regex = re.compile(match_url_regex)\n",
-    "            match_urls = match_url_regex.findall(site)\n",
-    "            match_details = pd.DataFrame(match_urls, columns =['url'])    \n",
-    "            match_details['raw'] = match_details['url'].apply(get_match_raw)\n",
-    "            match_details.to_csv('raw_'+file_name)\n",
-    "        else:\n",
-    "            match_details = pd.read_csv('raw_'+file_name)\n",
-    "            match_details['raw'] = match_details['raw'].apply(get_parced_data)\n",
-    "\n",
-    "            match_details['schedule'] = match_details['raw'].apply(get_match_schedule)\n",
-    "            match_details['venue'] = match_details['raw'].apply(get_venue_name)    \n",
-    "            match_details['raw_title'] = match_details['raw'].apply(get_match_title)\n",
-    "            title_regex = re.compile(r'(?P<teamA>[a-zA-Z_ \\']*) (?P<teamA_score>\\d?\\d) - (?P<teamB_score>\\d?\\d) (?P<teamB>[a-zA-Z_ \\']*) -')\n",
-    "            match_details[['teamA', 'teamB']] = pd.DataFrame(match_details['raw_title']\n",
-    "                                                             .apply(lambda x: get_team_names(x, title_regex))\n",
-    "                                                             .tolist(), index=match_details.index)\n",
-    "            match_details[['teamA_score', 'teamB_score']] = pd.DataFrame(match_details['raw_title']\n",
-    "                                                                         .apply(lambda x: get_team_scores(x, title_regex))\n",
-    "                                                                         .tolist(), index=match_details.index)\n",
-    "            match_details[['winner_Team','winner_score']] = pd.DataFrame(match_details\n",
-    "                                                                         .apply(get_winner_details, axis=1)\n",
-    "                                                                         .tolist(), index=match_details.index)  \n",
-    "\n",
-    "            match_details.drop(columns=['raw','raw_title'], inplace=True)\n",
-    "            match_details.to_csv('match_details_'+file_name)\n",
-    "            \n",
-    "            print('Completed get_match_details')\n",
-    "            return match_details\n",
-    "    else:\n",
-    "        print('Completed get_match_details')\n",
-    "        return pd.read_csv('match_details_'+file_name)"
+    "for child in parced_data:\n",
+    "    if(child.find('h2')):\n",
+    "        crimes.append(child)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e233db6-63ae-4ba8-94e9-8e7c68a6a953",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "chromedriver_path = 'C:/webdrivers/chromedriver'\n",
-    "service = Service(chromedriver_path)\n",
-    "\n",
-    "# Link config\n",
-    "google_base_url = 'https://www.google.com/search?q='\n",
-    "\n",
-    "class SoccerCovid:\n",
-    "    def __init__(self):\n",
-    "        self.final_data = {}\n",
-    "        pass\n",
-    "\n",
-    "    def get_driver(self):\n",
-    "        return webdriver.Chrome(service=service)\n",
-    "    \n",
-    "    def get_url(self, param):\n",
-    "        param += ' wikipedia'\n",
-    "        param = param.replace(\" \", \"+\") \n",
-    "        return ''.join([google_base_url, param])\n",
-    "    \n",
-    "    def get_by_xpath(self, driver, xpath):\n",
-    "        return driver.find_elements(By.XPATH, xpath)\n",
-    "        \n",
-    "    def navigate_to_site(self, driver, url):\n",
-    "        driver.get(url)\n",
-    "        time.sleep(2)\n",
-    "        \n",
-    "    def get_wiki_url(self, driver, param, ext = False):\n",
-    "        param = str(param)\n",
-    "        param += ' Football Club' if ext else ''\n",
-    "        url = self.get_url(param)\n",
-    "        self.navigate_to_site(driver, url)\n",
-    "        xpath = \"//a[contains(@href, 'wikipedia.org/wiki')]\"\n",
-    "        url_list = driver.find_elements(By.XPATH, xpath)\n",
-    "        return url_list[0].get_attribute('href')\n",
-    "    \n",
-    "    def get_venue_location(self, match, driver):\n",
-    "        wiki_url = self.get_wiki_url(driver, match['venue'])\n",
-    "        self.navigate_to_site(driver, wiki_url)  \n",
-    "        xpath = \"//th[contains(text(), 'Location' )]/following-sibling::td\"\n",
-    "        raw_venue_location = self.get_by_xpath(driver, xpath)\n",
-    "        if raw_venue_location:\n",
-    "            return raw_venue_location[0].text\n",
-    "    \n",
-    "    def get_winner_location(self, match, driver):\n",
-    "        wiki_url = self.get_wiki_url(driver, match['winner_Team'], True)\n",
-    "        self.navigate_to_site(driver, wiki_url)\n",
-    "        xpath = \"//th[contains(text(), 'Ground' )]/following-sibling::td/a\"\n",
-    "        raw_venue_url = self.get_by_xpath(driver, xpath)\n",
-    "        if raw_venue_url:\n",
-    "            venue_url = raw_venue_url[0].get_attribute('href')\n",
-    "            self.navigate_to_site(driver, venue_url)\n",
-    "            xpath = \"//th[contains(text(), 'Location' )]/following-sibling::td\"\n",
-    "            raw_winner_loaction = self.get_by_xpath(driver, xpath)\n",
-    "            if raw_winner_loaction:\n",
-    "                return raw_winner_loaction[0].text\n",
-    "    \n",
-    "    def get_unique_venues(self, match_details, driver):\n",
-    "        unique_venue = pd.DataFrame()\n",
-    "        unique_venue['venue'] = match_details['venue'].unique()\n",
-    "        unique_venue['venue_location'] = unique_venue.apply(lambda x: self.get_venue_location(x, driver), axis = 1)\n",
-    "        return unique_venue\n",
-    "    \n",
-    "    def get_unique_winners(self, match_details, driver):\n",
-    "        unique_winner = pd.DataFrame()\n",
-    "        unique_winner['winner_Team'] = match_details['winner_Team'].unique()\n",
-    "        unique_winner['winner_location'] = unique_winner.apply(lambda x: self.get_winner_location(x, driver), axis = 1)\n",
-    "        return unique_winner\n",
-    "        \n",
-    "    def scrape_pages(self, match_details):\n",
-    "        driver = self.get_driver()\n",
-    "        \n",
-    "        unique_venue = self.get_unique_venues(match_details, driver)\n",
-    "        match_details = match_details.merge(unique_venue, on='venue', how='left')\n",
-    "        \n",
-    "        unique_winner = self.get_unique_winners(match_details, driver)\n",
-    "        match_details = match_details.merge(unique_winner, on='winner_Team', how='left')\n",
-    "        \n",
-    "        driver.quit()\n",
-    "        return match_details\n",
-    "    \n",
-    "    def start_scraping(self, match_details_df):\n",
-    "        return self.scrape_pages(match_details_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eede3231-6914-42e1-baab-be6b62707efb",
+   "id": "7cc7673c-ca46-4948-bebd-41dcfa0cfd6f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dates = ['2019-20', '2020-21', '2021-22']\n",
+    "# crimes[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1702632d-59ff-4f8b-b0b6-ba37dc61fb1c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "crimes_by_date = pd.DataFrame(columns=['publish_date','category','raw_crimes'])\n",
+    "for x in crimes:\n",
+    "    publish_date = x.find(\"h2\").text.split(',',1)[1]\n",
+    "    raw_crimes = x.find_all(\"p\")\n",
+    "    for c in raw_crimes:\n",
+    "        if c.find(\"u\"):\n",
+    "            for cat in c.find_all(\"u\"):\n",
+    "                category = 'cat.text'\n",
+    "                crimes_by_date.loc[len(crimes_by_date.index)] = [publish_date, category, raw_crimes] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5df15bd1-bb84-4b10-98d2-082bd62a61ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# regex \n",
+    "cat_regex = re.compile(r'<p><strong><u>(?P<cat>[a-zA-Z \\/-]*)<\\/u><br\\/>')\n",
+    "city_regex = re.compile(r'(?P<city>[a-zA-z ]*),\\s\\d{5}')\n",
+    "zip_regex = re.compile(r'[a-zA-z ]*,\\s(?P<zip>\\d{5}):')\n",
+    "date_regex = re.compile(r'(?P<date>\\w+\\.?\\s\\d+-?\\d*)')\n",
+    "time_regex = re.compile(r'\\s(?P<time>\\d{1,2}:\\d{1,2}\\s*[a.mp]*)')\n",
+    "street_regex = re.compile(r':\\s?<\\/strong>(?P<street>.*),\\s?(March|Feb.|February)?')\n",
+    "notes_time_regex = re.compile(r':\\d{1,2}\\s*[a.mp]*<br\\/>\\s(.*)<')\n",
+    "notes_date_regex = re.compile(r'\\w+\\.?\\s\\d+-?\\d*.*,\\s(.*)<')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ea73c07-00ab-4d3a-aacd-ceb0f5144b0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "by_crime_df = pd.DataFrame(columns=['publish_date', 'category', 'city', 'zip_code', 'street', 'crime_date', 'crime_time', 'add_notes'])\n",
     "\n",
-    "for date in dates:\n",
-    "    file_name = 'covid_soccer_' + date + '.csv'\n",
-    "    if not os.path.exists(file_name):\n",
-    "        print(f'Started {file_name}')\n",
-    "        result_df = get_match_details(date, file_name)\n",
-    "        result_df = SoccerCovid().start_scraping(result_df)\n",
-    "        result_df.to_csv(file_name)\n",
-    "        print(f'Completed {file_name}')"
+    "def by_crime(x):\n",
+    "    for c in x['raw_crimes']:\n",
+    "        cat = np.NaN\n",
+    "        street = np.NaN\n",
+    "        crime_date = np.NaN\n",
+    "        crime_time = np.NaN\n",
+    "        add_notes = np.NaN\n",
+    "        \n",
+    "        if cat_regex.findall(str(c)):\n",
+    "            cat = cat_regex.findall(str(c))[0]\n",
+    "        if city_regex.findall(str(c)):\n",
+    "            city = city_regex.findall(str(c))[0]\n",
+    "        if zip_regex.findall(str(c)):\n",
+    "            zip_code = zip_regex.findall(str(c))[0]\n",
+    "        # Fetch Street\n",
+    "        if street_regex.findall(str(c)):\n",
+    "            street = street_regex.findall(str(c))[0][0]\n",
+    "        if 'March' in street:\n",
+    "            street = street.split('March')[0]\n",
+    "        if 'Feb.' in street:\n",
+    "            street = street.split('Feb.')[0]\n",
+    "        if 'Feburary' in street:\n",
+    "            street = street.split('Feburary')[0]\n",
+    "        if date_regex.findall(str(c)):\n",
+    "            crime_date = date_regex.findall(str(c))[0]\n",
+    "        if time_regex.findall(str(c)):\n",
+    "            crime_time = time_regex.findall(str(c))[0]\n",
+    "        if notes_time_regex.findall(str(c)):\n",
+    "            add_notes = notes_time_regex.findall(str(c))[0]\n",
+    "#         if add_notes.isnull():\n",
+    "#             add_notes = notes_date_regex.findall(str(c))[0]\n",
+    "        by_crime_df.loc[len(by_crime_df.index)] = [x['publish_date'], cat, city, zip_code, street, crime_date, crime_time, add_notes]                    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69d39d07-7007-449d-985f-b8e3ecb5ed8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crimes_by_date.apply(by_crime,axis = 1)\n",
+    "by_crime_df['category'].fillna(method='ffill',inplace = True)\n",
+    "by_crime_df.drop_duplicates(inplace = True)\n",
+    "by_crime_df.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39713752-30de-4717-bc2a-12b4582a3e06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "by_crime_df['add_notes'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2416737c-e721-49b0-80a7-4dc80a01db88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "by_crime_df.to_excel('data/howard-daily-crime-bulletin.xlsx', index=False)"
    ]
   }
  ],
